--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -154,25 +154,26 @@
     "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
     "                 config=None, tokenizer=None, is_lm=False,\n",
     "                 padding=False, truncation=False, max_length=None, \n",
-    "                 **kwargs):\n",
+    "                 pre_tokenized=False, **kwargs):\n",
     "        if tokenizer is None:\n",
     "            tokenizer = tokenizer_cls.from_pretrained(pretrained_model_name, config=config)\n",
     "        self.tokenizer = tokenizer\n",
     "        self.kwargs = kwargs\n",
     "        store_attr()\n",
     "        \n",
-    "    def encodes(self, text):\n",
-    "#         print(text)\n",
-    "#         print(type(text))\n",
-    "#         inps = self.tokenizer.encode_plus(text,\n",
-    "#                               add_special_tokens=True,\n",
-    "#                               padding=self.padding,\n",
-    "#                               truncation=self.truncation,\n",
-    "#                               max_length=self.max_length,\n",
-    "#                               return_tensors='pt',\n",
-    "#                               **self.kwargs)\n",
-    "        inps = text\n",
-    "        return inps\n",
+    "    def encodes(self, x):\n",
+    "        if self.pre_tokenized:\n",
+    "            toks = x\n",
+    "        else:\n",
+    "            toks = self.tokenizer(x,\n",
+    "                          add_special_tokens=True,\n",
+    "                          padding=self.padding,\n",
+    "                          truncation=self.truncation,\n",
+    "                          max_length=self.max_length,\n",
+    "                          return_tensors='pt',\n",
+    "                          **self.kwargs)\n",
+    "        return toks\n",
+    "    \n",
     "    def decodes(self, x:TensorText):\n",
     "        return TitledStr(self.tokenizer.decode(x.cpu(), skip_special_tokens=False))"
    ]
@@ -221,25 +222,23 @@
     "        \n",
     "        if self.do_targets and isinstance(batch[0][1], str):\n",
     "            target_texts = [s[1] for s in batch]\n",
-    "            targets = self.tokenizer(target_texts,\n",
-    "                              add_special_tokens=False,\n",
-    "                              padding=self.padding,\n",
-    "                              truncation=self.truncation,\n",
-    "                              max_length=self.max_length,\n",
-    "                              return_tensors='pt', \n",
-    "                                    **self.kwargs).input_ids\n",
-    "            # join inps and targs\n",
+    "            with self.tokenizer.as_target_tokenizer():\n",
+    "                targets = self.tokenizer(target_texts,\n",
+    "                                  padding=self.padding,\n",
+    "                                  truncation=self.truncation,\n",
+    "                                  max_length=self.max_length,\n",
+    "                                  return_tensors='pt', \n",
+    "                                  **self.kwargs).input_ids\n",
+    "            targets = (targets, )\n",
     "        else:\n",
     "            # inps are batched, collate targets into batches too\n",
-    "            labels = default_collate([s[1:] for s in batch])\n",
-    "            if self.with_labels:\n",
-    "                # TODO consider cases when there are multiple labels\n",
-    "                inps['labels'] = labels[0]\n",
-    "                res = (inps, )\n",
-    "            else:\n",
-    "                res = (inps, ) + tuple(labels)\n",
-    "#         if self.is_lm:\n",
-    "#             res = [(x, x) for x in res]\n",
+    "            targets = default_collate([s[1:] for s in batch])\n",
+    "        if self.with_labels:\n",
+    "            # TODO consider cases when there are multiple labels\n",
+    "            inps['labels'] = targets[0]\n",
+    "            res = (inps, )\n",
+    "        else:\n",
+    "            res = (inps, ) + tuple(targets)\n",
     "        return res\n",
     "    \n",
     "    def decodes(self, x:TensorText):\n",
@@ -362,6 +361,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export \n",
+    "class UndictS2S(ItemTransform):\n",
+    "\n",
+    "    def decodes(self, b):\n",
+    "        x = b[0]\n",
+    "        if 'input_ids' in x: res = (TensorText(x['input_ids']), )\n",
+    "        if 'labels' in x: res += (TensorText(x['labels']), )\n",
+    "        return res + tuple(b[1:])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -379,14 +394,15 @@
     "    \"A `TransformBlock` for texts using pretrained tokenizers from Huggingface\"\n",
     "    @delegates(TokBatchTransform)\n",
     "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
-    "                 config=None, tokenizer=None, preprocessed=False, **kwargs):\n",
+    "                 config=None, tokenizer=None, preprocessed=False, do_targets=False, \n",
+    "                 **kwargs):\n",
     "        batch_tfm_cls = PadBatchTransform if preprocessed else TokBatchTransform\n",
     "        before_batch_tfm = batch_tfm_cls(pretrained_model_name=pretrained_model_name, tokenizer_cls=tokenizer_cls,\n",
-    "                 config=config, tokenizer=tokenizer, **kwargs)\n",
+    "                 config=config, tokenizer=tokenizer, do_targets=do_targets, **kwargs)\n",
     "        return super().__init__(dl_type=SortedDL,\n",
     "                                dls_kwargs={'before_batch': before_batch_tfm,\n",
     "                                            'create_batch': fa_convert},\n",
-    "                                batch_tfms=Undict()\n",
+    "                                batch_tfms=UndictS2S() if do_targets else Undict()\n",
     "                               )\n",
     "\n",
     "#     @classmethod\n",
