--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -56,7 +56,8 @@
     "### Fine-tuning\n",
     "\n",
     "1. [Sentiment classification: IMDB](https://aikindergarten.github.io/fasthugs/examples.classification-imdb.html)\n",
-    "2. [GLUE benchmark](https://aikindergarten.github.io/fasthugs/examples.glue-benchmark.html)"
+    "2. [GLUE benchmark](https://aikindergarten.github.io/fasthugs/examples.glue-benchmark.html)\n",
+    "3. [Machine Translation](https://aikindergarten.github.io/fasthugs/examples.machine-translation.html)"
    ]
   },
   {
