--- a/nbs/14_examples.machine_translation.ipynb
+++ b/nbs/14_examples.machine_translation.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text classification: IMDB dataset"
+    "# Machine Translation: fr-en"
    ]
   },
   {
