--- a/nbs/14_examples.machine_translation.ipynb
+++ b/nbs/14_examples.machine_translation.ipynb
@@ -386,6 +386,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)"
    ]
   },
@@ -407,7 +408,7 @@
    "outputs": [],
    "source": [
     "dblock = DataBlock(\n",
-    "    blocks = [TransformersTextBlock(tokenizer=tokenizer, do_targets=True)],\n",
+    "    blocks = [TransformersTextBlock(tokenizer=tokenizer, do_targets=True, with_labels=True)],\n",
     "    get_x=TextGetter('fr', 'en'),\n",
     "    item_tfms=untuple1,\n",
     "    splitter=RandomSplitter())"
@@ -534,6 +535,7 @@
     }
    ],
    "source": [
+    "#collapse\n",
     "dls.show_batch(max_n=4)"
    ]
   },
