--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -94,11 +94,30 @@
    "source": [
     "#export\n",
     "class TextGetter(ItemTransform):\n",
-    "    def __init__(self, s1='text', s2=None):\n",
-    "        self.s1, self.s2 = s1, s2\n",
+    "    \"Retrieves text fields `s1` and [optionally] `s2`. Adds corresponding prefixes\"\n",
+    "    def __init__(self, s1:str='text', s2:str=None, prefix1:str='', prefix2:str=''):\n",
+    "        store_attr()\n",
+    "    \n",
     "    def encodes(self, sample):\n",
-    "        if self.s2 is None: return sample[self.s1]\n",
-    "        else: return sample[self.s1], sample[self.s2]"
+    "        if self.s2 is None: return self.prefix1 + sample[self.s1]\n",
+    "        else: return self.prefix1+sample[self.s1], self.prefix2+sample[self.s2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class KeyGetter(ItemTransform):\n",
+    "    \"Returns a dict with `keys` retrieved from input sample\"\n",
+    "    def __init__(self, keys:Iterable):\n",
+    "        self.keys = set(keys)\n",
+    "    \n",
+    "    def encodes(self, sample):\n",
+    "        # TODO warn when key is not in sample.keys()\n",
+    "        return {k:v for k,v in sample.items() if k in self.keys}"
    ]
   },
   {
@@ -194,7 +213,7 @@
     "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
     "                 config=None, tokenizer=None, is_lm=False, with_labels=False,\n",
     "                 padding=True, truncation=True, max_length=None, \n",
-    "                 do_targets=False, **kwargs):\n",
+    "                 do_targets=False, target_pad_id=-100, **kwargs):\n",
     "        if tokenizer is None:\n",
     "            tokenizer = tokenizer_cls.from_pretrained(pretrained_model_name, config=config)\n",
     "        self.tokenizer = tokenizer\n",
@@ -223,12 +242,16 @@
     "        if self.do_targets and isinstance(batch[0][1], str):\n",
     "            target_texts = [s[1] for s in batch]\n",
     "            with self.tokenizer.as_target_tokenizer():\n",
-    "                targets = self.tokenizer(target_texts,\n",
+    "                target_enc = self.tokenizer(target_texts,\n",
     "                                  padding=self.padding,\n",
     "                                  truncation=self.truncation,\n",
     "                                  max_length=self.max_length,\n",
     "                                  return_tensors='pt', \n",
-    "                                  **self.kwargs).input_ids\n",
+    "                                  **self.kwargs)\n",
+    "            targets = target_enc.input_ids\n",
+    "            if self.target_pad_id != self.tokenizer.pad_token_id:\n",
+    "                tgt_attn_mask = target_enc.attention_mask.to(torch.bool)\n",
+    "                targets = torch.where(tgt_attn_mask, targets, -100)\n",
     "            targets = (targets, )\n",
     "        else:\n",
     "            # inps are batched, collate targets into batches too\n",
@@ -246,6 +269,8 @@
     "            x1, x2 = split_by_sep(x, self.tokenizer.sep_token_id)\n",
     "            return (TitledStr(self.tokenizer.decode(x1.cpu(), skip_special_tokens=True)),\n",
     "                    TitledStr(self.tokenizer.decode(x2.cpu(), skip_special_tokens=True)))\n",
+    "        if self.do_targets:\n",
+    "            x = torch.where(x == -100, self.tokenizer.pad_token_id, x)\n",
     "        return TitledStr(self.tokenizer.decode(x.cpu(), skip_special_tokens=True))"
    ]
   },
@@ -911,9 +936,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:torchenv]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-torchenv-py"
   }
  },
  "nbformat": 4,
