--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -52,7 +52,9 @@
     "from functools import partial\n",
     "from transformers import (AutoTokenizer, AutoConfig, BatchEncoding,\n",
     "                          DataCollatorForLanguageModeling,\n",
-    "                          DataCollatorForWholeWordMask)"
+    "                          DataCollatorForWholeWordMask)\n",
+    "\n",
+    "from typing import Iterable"
    ]
   },
   {
@@ -285,7 +287,7 @@
     "    def __init__(self, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
     "                 config=None, tokenizer=None, is_lm=False, with_labels=False,\n",
     "                 padding=True, truncation=True, max_length=None,\n",
-    "                 do_targets=False, **kwargs):\n",
+    "                 do_targets=False, target_pad_id=-100, **kwargs):\n",
     "        if tokenizer is None:\n",
     "            tokenizer = tokenizer_cls.from_pretrained(pretrained_model_name, config=config)\n",
     "        self.tokenizer = tokenizer\n",
@@ -295,6 +297,15 @@
     "\n",
     "    def encodes(self, samples):\n",
     "        toks = [s[0] for s in samples]\n",
+    "        if self.do_targets and ('labels' in toks[0].keys()):\n",
+    "            label_lens = [len(s['labels']) for s in toks]\n",
+    "            max_label_length = max(label_lens)\n",
+    "            padding_side = self.tokenizer.padding_side\n",
+    "            for tok, label_len in zip(toks, label_lens):\n",
+    "                remainder = [self.target_pad_id] * (max_label_length - label_len)\n",
+    "                tok[\"labels\"] = (tok[\"labels\"] + remainder\n",
+    "                                 if padding_side==\"right\" else\n",
+    "                                 remainder + tok[\"labels\"])\n",
     "        inps = self.tokenizer.pad(toks,\n",
     "                              padding=self.padding,\n",
     "                              max_length=self.max_length,\n",
@@ -303,7 +314,6 @@
     "\n",
     "        # inps are batched, collate targets into batches too\n",
     "        labels = default_collate([s[1:] for s in samples])\n",
-    "        \n",
     "        res = (inps, ) + tuple(labels)\n",
     "        return res\n",
     "\n",
@@ -312,6 +322,8 @@
     "            x1, x2 = split_by_sep(x, self.tokenizer.sep_token_id)\n",
     "            return (TitledStr(self.tokenizer.decode(x1.cpu(), skip_special_tokens=True)),\n",
     "                    TitledStr(self.tokenizer.decode(x2.cpu(), skip_special_tokens=True)))\n",
+    "        if self.do_targets:\n",
+    "            x = torch.where(x == -100, self.tokenizer.pad_token_id, x)\n",
     "        return TitledStr(self.tokenizer.decode(x.cpu(), skip_special_tokens=True))"
    ]
   },
