--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -30,7 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install git+git://github.com/aikindergarten/fasthugs.git`"
+    "```\n",
+    "pip install git+git://github.com/aikindergarten/fasthugs.git\n",
+    "```"
    ]
   },
   {
