--- a/nbs/02_metrics.ipynb
+++ b/nbs/02_metrics.ipynb
@@ -55,7 +55,9 @@
     "from fastai.basics import Transform, ItemTransform, Callback, ValueMetric\n",
     "from functools import partial\n",
     "from datasets import load_metric\n",
-    "import nltk\n",
+    "try:\n",
+    "    import nltk\n",
+    "except: pass\n",
     "from fasthugs.learner import TransCallback"
    ]
   },
@@ -137,14 +139,6 @@
     "                self.learn.metrics += [ValueMetric(getattr(self, score_name), score_name)]\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3cc75df8-8467-437e-9578-d96fd0defac1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
