--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -56,7 +56,8 @@
     "from inspect import signature\n",
     "from fasthugs.data import TransformersTextBlock\n",
     "\n",
-    "from transformers import AutoTokenizer, AutoConfig, AutoModelForSequenceClassification, BatchEncoding\n",
+    "from transformers import (AutoTokenizer, AutoConfig, AutoModelForSequenceClassification, BatchEncoding,\n",
+    "                          PreTrainedModel)\n",
     "from transformers.modeling_outputs import QuestionAnsweringModelOutput"
    ]
   },
@@ -127,7 +128,7 @@
    "id": "49115996",
    "metadata": {},
    "source": [
-    "## TransLearner and utils"
+    "## Utils"
    ]
   },
   {
@@ -185,6 +186,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9928abfe-a504-4b15-bf30-7706ceaf42ed",
+   "metadata": {},
+   "source": [
+    "## Callbacks "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8d5a3675",
@@ -220,6 +229,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9409975b-c40f-43ba-92a5-609c63ff4cc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GeneratePreds(Callback):\n",
+    "    \"Produces `generated_tokens` which can be used for metrics computation\"\n",
+    "    oreder = TransCallback.order-1\n",
+    "    run_train, run_valid = False, True\n",
+    "    @delegates(PreTrainedModel.generate)\n",
+    "    def __init__(self, **kwargs):\n",
+    "        self.gen_kewargs = kwargs\n",
+    "    def before_fit(self):\n",
+    "        self.learn.predict_with_generate = True\n",
+    "    def before_batch(self):\n",
+    "        input_ids, attention_mask = self.xb[0]['input_ids'], self.xb[0]['attention_mask']\n",
+    "        self.learn.generated_tokens = self.model.generate(input_ids, attention_mask, **self.gen_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a90d147-1ee6-4f5e-8307-823528d16d08",
+   "metadata": {},
+   "source": [
+    "## Learner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7ea52e12",
    "metadata": {},
    "outputs": [],
@@ -228,11 +266,12 @@
     "@delegates(Learner.__init__)\n",
     "class TransLearner(Learner):\n",
     "    \"Learner for training transformers from HuggingFace\"\n",
-    "    def __init__(self, dls, model, **kwargs):\n",
+    "    def __init__(self, dls, model:PreTrainedModel, predict_with_generate:bool=False, **kwargs):\n",
     "        splitter = kwargs.get('splitter', None)\n",
     "        if splitter is None: kwargs['splitter'] = default_splitter\n",
     "        super().__init__(dls, model, **kwargs)\n",
-    "        self.add_cb(TransCallback(model))"
+    "        self.add_cb(TransCallback(model))\n",
+    "        self.predict_with_generate = predict_with_generate"
    ]
   },
   {
@@ -389,9 +428,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:torchenv]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-torchenv-py"
   }
  },
  "nbformat": 4,
