--- a/nbs/02_metrics.ipynb
+++ b/nbs/02_metrics.ipynb
@@ -54,6 +54,7 @@
     "from fastcore.all import *\n",
     "from fastai.basics import Transform, ItemTransform, Callback, ValueMetric\n",
     "from functools import partial\n",
+    "from typing import List\n",
     "from datasets import load_metric\n",
     "try:\n",
     "    import nltk\n",
@@ -98,12 +99,16 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "class RougeMetric(Callback):\n",
+    "class RougeScore(Callback):\n",
+    "    \"\"\"\n",
+    "    Computes ROUGE score using HF datasets metric. Adds `ValueMetric`\n",
+    "    for each score iin `scores` \n",
+    "    \"\"\"\n",
     "    order = TransCallback.order + 2\n",
     "    run_train, run_valid = False, True\n",
-    "    def __init__(self, tokenizer, argmax=True, agg='mid', measure='fmeasure',\n",
-    "                 scores=['rouge1', 'rouge2', 'rougeL', 'rougeLsum']):\n",
-    "        nltk.download('punkt')\n",
+    "    def __init__(self, tokenizer, argmax:bool=True, agg:str='mid', measure:str='fmeasure',\n",
+    "                 scores:List[str]=['rouge1', 'rouge2', 'rougeL', 'rougeLsum']):\n",
+    "        nltk.download('punkt', quiet=True)\n",
     "        self.metric = load_metric(\"rouge\")\n",
     "        store_attr()\n",
     "        self._register_value_funcs()\n",
@@ -111,14 +116,16 @@
     "    def before_fit(self): self.add_metrics()\n",
     "    \n",
     "    def after_pred(self):\n",
-    "        preds = self.pred\n",
+    "        if self.predict_with_generate:\n",
+    "            preds = self.generated_tokens\n",
+    "        else:\n",
+    "            preds = self.pred.argmax(-1)\n",
     "        labels = self.yb[0] if len(self.yb) else self.trans.labels[0]\n",
-    "        if self.argmax: preds = preds.argmax(-1)\n",
     "        # decode preds and labels\n",
-    "        decoded_preds = tokenizer.batch_decode(preds, skip_special_tokens=True)\n",
+    "        decoded_preds = self.tokenizer.batch_decode(preds, skip_special_tokens=True)\n",
     "        # Replace -100 in the labels as we can't decode them.\n",
-    "        labels = torch.where(labels != -100, labels, tokenizer.pad_token_id)\n",
-    "        decoded_labels = tokenizer.batch_decode(labels, skip_special_tokens=True)\n",
+    "        labels = torch.where(labels != -100, labels, self.tokenizer.pad_token_id)\n",
+    "        decoded_labels = self.tokenizer.batch_decode(labels, skip_special_tokens=True)\n",
     "        # Rouge expects a newline after each sentence\n",
     "        decoded_preds = [\"\\n\".join(nltk.sent_tokenize(pred.strip())) for pred in decoded_preds]\n",
     "        decoded_labels = [\"\\n\".join(nltk.sent_tokenize(label.strip())) for label in decoded_labels]\n",
