--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -233,18 +233,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class GeneratePreds(Callback):\n",
     "    \"Produces `generated_tokens` which can be used for metrics computation\"\n",
-    "    oreder = TransCallback.order-1\n",
+    "    order = TransCallback.order-1\n",
     "    run_train, run_valid = False, True\n",
     "    @delegates(PreTrainedModel.generate)\n",
     "    def __init__(self, **kwargs):\n",
-    "        self.gen_kewargs = kwargs\n",
+    "        self.gen_kwargs = kwargs\n",
     "    def before_fit(self):\n",
     "        self.learn.predict_with_generate = True\n",
     "    def before_batch(self):\n",
     "        input_ids, attention_mask = self.xb[0]['input_ids'], self.xb[0]['attention_mask']\n",
-    "        self.learn.generated_tokens = self.model.generate(input_ids, attention_mask, **self.gen_kwargs)"
+    "        self.learn.generated_tokens = self.model.generate(input_ids=input_ids, attention_mask=attention_mask, **self.gen_kwargs)"
    ]
   },
   {
