--- a/nbs/02_metrics.ipynb
+++ b/nbs/02_metrics.ipynb
@@ -51,6 +51,7 @@
    "outputs": [],
    "source": [
     "#export\n",
+    "import torch\n",
     "from fastcore.all import *\n",
     "from fastai.basics import Transform, ItemTransform, Callback, ValueMetric\n",
     "from functools import partial\n",
