--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -30,7 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install git+git://github.com/aikindergarten/fasthugs.git`"
+    "```\n",
+    "pip install git+git://github.com/aikindergarten/fasthugs.git\n",
+    "```"
    ]
   },
   {
@@ -57,7 +59,8 @@
     "\n",
     "1. [Sentiment classification: IMDB](https://aikindergarten.github.io/fasthugs/examples.classification-imdb.html)\n",
     "2. [GLUE benchmark](https://aikindergarten.github.io/fasthugs/examples.glue-benchmark.html)\n",
-    "3. [Machine Translation](https://aikindergarten.github.io/fasthugs/examples.machine-translation.html)"
+    "3. [Machine Translation](https://aikindergarten.github.io/fasthugs/examples.machine-translation.html)\n",
+    "4. [Summarization](https://aikindergarten.github.io/fasthugs/examples.summarization.html)"
    ]
   },
   {
