--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -54,6 +54,7 @@
     "from fastai.basics import *\n",
     "from fastai.text.all import TensorText\n",
     "from inspect import signature\n",
+    "from collections import namedtuple\n",
     "from fasthugs.data import TransformersTextBlock\n",
     "\n",
     "from transformers import (AutoTokenizer, AutoConfig, AutoModelForSequenceClassification, BatchEncoding,\n",
@@ -204,13 +205,12 @@
     "class TransCallback(Callback):\n",
     "    \"Handles HuggingFace model inputs and outputs\"\n",
     "    def __init__(self, model):\n",
-    "        self.labels = tuple()\n",
-    "        self.model_args = {k:v.default for k, v in signature(model.forward).parameters.items()}\n",
+    "        sig = signature(model.forward)\n",
+    "        ModelInputs = namedtuple('ModelInputs', sig.parameters.keys(), defaults=[v.default for v in sig.parameters.values()])\n",
+    "        self._model_inputs = ModelInputs\n",
     "    \n",
     "    def before_batch(self):\n",
-    "        if 'labels' in self.xb[0].keys():\n",
-    "            self.labels = (self.xb[0]['labels'], )\n",
-    "        self.learn.xb = tuple([self.xb[0].get(k, self.model_args[k]) for k in self.model_args.keys()])\n",
+    "        self.learn.xb = self._model_inputs(**{k:v for k,v in self.xb[0].items() if k in self._model_inputs._fields})\n",
     "    \n",
     "    def after_pred(self):\n",
     "        if 'loss' in self.pred:\n",
@@ -221,9 +221,8 @@
     "        else: self.learn.pred = self.pred.logits\n",
     "    \n",
     "    def after_loss(self):\n",
-    "        if len(self.labels):\n",
-    "            self.learn.yb = self.labels\n",
-    "            self.labels = tuple()"
+    "        if not (getattr(self.xb, 'labels', None) is None):\n",
+    "            self.learn.yb = (self.xb.labels, )"
    ]
   },
   {
@@ -310,7 +309,7 @@
     "path = untar_data(URLs.IMDB_SAMPLE)\n",
     "texts = pd.read_csv(path/'texts.csv')\n",
     "\n",
-    "model_name = 'distilbert-base-uncased'\n",
+    "model_name = 'google/electra-small-discriminator'\n",
     "max_len = 128\n",
     "bs = 8\n",
     "val_bs = 16\n",
@@ -332,10 +331,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_layer_norm.weight', 'vocab_layer_norm.bias', 'vocab_transform.bias', 'vocab_projector.bias', 'vocab_projector.weight', 'vocab_transform.weight']\n",
-      "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.weight', 'pre_classifier.bias', 'classifier.bias', 'pre_classifier.weight']\n",
+      "Some weights of the model checkpoint at google/electra-small-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense.weight']\n",
+      "- This IS expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at google/electra-small-discriminator and are newly initialized: ['classifier.dense.bias', 'classifier.dense.weight', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -355,17 +354,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0.525150</td>\n",
-       "      <td>0.571722</td>\n",
-       "      <td>0.730000</td>\n",
-       "      <td>00:22</td>\n",
+       "      <td>0.671439</td>\n",
+       "      <td>0.640339</td>\n",
+       "      <td>0.705000</td>\n",
+       "      <td>00:39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.311822</td>\n",
-       "      <td>0.347995</td>\n",
-       "      <td>0.880000</td>\n",
-       "      <td>00:22</td>\n",
+       "      <td>0.527139</td>\n",
+       "      <td>0.466721</td>\n",
+       "      <td>0.805000</td>\n",
+       "      <td>00:37</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -382,7 +381,84 @@
     "#slow\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "learn = TransLearner(dls, model, metrics=accuracy)\n",
-    "learn.fit(2, 2e-5)"
+    "learn.fit(2, 5e-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ab32cf1-16fd-49c7-8b77-a7ccf4163f49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at google/electra-small-discriminator were not used when initializing ElectraForSequenceClassification: ['discriminator_predictions.dense_prediction.bias', 'discriminator_predictions.dense.bias', 'discriminator_predictions.dense_prediction.weight', 'discriminator_predictions.dense.weight']\n",
+      "- This IS expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing ElectraForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of ElectraForSequenceClassification were not initialized from the model checkpoint at google/electra-small-discriminator and are newly initialized: ['classifier.dense.weight', 'classifier.dense.bias', 'classifier.out_proj.bias', 'classifier.out_proj.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: left;\">\n",
+       "      <th>epoch</th>\n",
+       "      <th>train_loss</th>\n",
+       "      <th>valid_loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.597677</td>\n",
+       "      <td>0.413160</td>\n",
+       "      <td>0.860000</td>\n",
+       "      <td>00:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.420096</td>\n",
+       "      <td>0.472560</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>00:38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "#slow\n",
+    "path = untar_data(URLs.IMDB_SAMPLE)\n",
+    "texts = pd.read_csv(path/'texts.csv')\n",
+    "\n",
+    "model_name = 'google/electra-small-discriminator'\n",
+    "max_len = 128\n",
+    "bs = 8\n",
+    "val_bs = 16\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "dblock = DataBlock(blocks = [TransformersTextBlock(tokenizer=tokenizer, with_labels=True), CategoryBlock()],\n",
+    "                   get_x=ItemGetter('text'),\n",
+    "                   get_y=ItemGetter('label'),\n",
+    "                   splitter=ColSplitter())\n",
+    "dls = dblock.dataloaders(texts, bs=bs, val_bs=val_bs)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
+    "learn = TransLearner(dls, model, metrics=accuracy)\n",
+    "learn.fit(2, 5e-5)"
    ]
   },
   {
