--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -964,6 +964,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Multiple Choice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class MultiChoiceTransform(Transform):\n",
+    "    \"\"\"\n",
+    "    Processes inputs for multiple choice\n",
+    "    \"\"\"\n",
+    "    def __init__(self, sentence_keys, ending_keys,\n",
+    "                 pretrained_model_name=None, tokenizer_cls=AutoTokenizer, \n",
+    "                 config=None, tokenizer=None, with_labels=False, padding=True, \n",
+    "                 truncation=True, max_length=None, **kwargs):\n",
+    "        if tokenizer is None:\n",
+    "            tokenizer = tokenizer_cls.from_pretrained(pretrained_model_name, config=config)\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.kwargs = kwargs\n",
+    "        store_attr()\n",
+    "    \n",
+    "    def encodes(self, batch):\n",
+    "        # inputs are list of tuple(dict, label)\n",
+    "        inps = [b[0] for b in batch]\n",
+    "        sk1, sk2 = self.sentece_keys\n",
+    "        num_endings = len(self.ending_keys)\n",
+    "        texts1, texts2 = [], []\n",
+    "        for s in inps:\n",
+    "            texts1.extend([s[sk1]]*num_endings)\n",
+    "            texts2.extend([f\"{s[sk2]} {s[e]}\" for e in self.ending_keys])\n",
+    "        inps = self.tokenizer(texts1, texts2,\n",
+    "                              add_special_tokens=True,\n",
+    "                              padding=self.padding,\n",
+    "                              truncation=self.truncation,\n",
+    "                              max_length=self.max_length,\n",
+    "                              return_tensors='pt',\n",
+    "                              **self.kwargs)\n",
+    "        inps = {k:v.reshape(-1, num_endings, v.size(1)) for k,v in inps.items()}\n",
+    "        \n",
+    "        targets = default_collate([s[1:] for s in batch])\n",
+    "        if self.with_labels:\n",
+    "            inps['labels'] = targets[0]\n",
+    "            res = (inps, )\n",
+    "        else:\n",
+    "            res = (inps, ) + tuple(targets)\n",
+    "        return res\n",
+    "    \n",
+    "    def decodes(self, x:TensorText):\n",
+    "        endings = ()\n",
+    "        for i, l in enumerate(self.ending_keys):\n",
+    "            x1, x2 = split_by_sep(x[i, :], self.tokenizer.sep_token_id)\n",
+    "            endings += (TitledStrEx(self.tokenizer.decode(x2.cpu(), skip_special_tokens=True), label=l),)\n",
+    "        return (TitledStrEx(self.tokenizer.decode(x1.cpu(), skip_special_tokens=True), label=self.sentence_keys[0]), ) + endings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "class MultiChoiceBlock(TransformBlock):\n",
+    "    \"A `TransformBlock` for texts using pretrained tokenizers from Huggingface\"\n",
+    "    @delegates(MultiChoiceTransform)\n",
+    "    def __init__(self, sentence_keys, ending_keys, pretrained_model_name=None, tokenizer_cls=AutoTokenizer,\n",
+    "                 config=None, tokenizer=None, preprocessed=False, \n",
+    "                 **kwargs):\n",
+    "        batch_tfm_cls = MultiChoiceTransform\n",
+    "        before_batch_tfm = batch_tfm_cls(sentence_keys, ending_keys, pretrained_model_name=pretrained_model_name, \n",
+    "                tokenizer_cls=tokenizer_cls, config=config, tokenizer=tokenizer, **kwargs)\n",
+    "        return super().__init__(dl_type=SortedDL,\n",
+    "                                dls_kwargs={'before_batch': before_batch_tfm,\n",
+    "                                            'create_batch': fa_convert},\n",
+    "                                batch_tfms=Undict())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Fin"
    ]
   },
